Changelog
=========

3.2.2 (unreleased)
------------------

- Personal Overview: Raise Unauthorized for unauthenticated users instead of
  hardcoded redirect to login form.
  This is required for Single-Sign-On with SPNEGO plugin to work.
  [lgraf] 

- Use always logged in user as responsible of a subdossier.
  [lknoepfel]

- Remove obsolete dependency on transmogrify.sqlinserter.
  [lgraf]

- Remove remaining traces of `related_items` index.
  [lgraf]

- Dossier resolving: Fixed `its_all_closed` check, for nested subtasks.
  [phgross]


3.2.1 (2014-01-23)
------------------

- Implement custom sort functions for both 'dotted' and 'grouped_by_three'
  reference formatters.
  [lgraf]

- Add requirement for a custom sort function to IReferenceFormatter interface
  [lgraf]

- Remove 4teamwork-ldap/ldap_plugin.xml from .gitignore and check it in
  (with placeholder credentials).
  [lgraf]

- Configure LDAP credentials from JSON file.
  [lgraf]

- Fix raising of exceptions and logging in msg2mime transform.
  [lgraf]

3.2 (2013-12-15)
----------------

- Document tooltip helper: Fixed link for the icon.
  [phgross]

- Fixed load order issue when setting tagged values to omit the changeNote
  field from the IVersionable behavior.
  [lgraf]

- Increase task_principals.principal column length to 255.
  [lgraf]

- Logout overlay: use absolute url to redirect to the logout view.
  [phgross]

- OGDS Updater: Gracefully skip users outside users_base referenced in groups.
  [lgraf]

- Add destructive class to logout button in logout overlay.
  [Julian Infanger]

- Add specific byline for the PloneSite(Personal overview).
  [phgross]

- Adjusted seperator of the `grouped_by_three` formatter.
  [phgross]

- Issued inbox task: fixed listing query, to search the complete client.
  [phgross]

- Corrected message after resolving a subdossier.
  [phgross]

- Inbox overview: List only active tasks and forwardings.
  [phgross]
