@@ -4,6 +4,9 @@ Changelog
 3.2.2 (unreleased)
 ------------------
 
+- Added NoClientIdDotted reference number formatter.
+  [lknoepfel]
+
 - Personal Overview: Raise Unauthorized for unauthenticated users instead of
   hardcoded redirect to login form.
   This is required for Single-Sign-On with SPNEGO plugin to work.
